# cardwire

./: .clang-format  .gitignore  Cargo.toml  Makefile  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: lint.yml  mdbook.yml  sonarqube.yml
assets/: cardwired.service  com.cardwire.daemon.conf  com.github.luytan.cardwire.conf
crates/cardwire-cli/: Cargo.toml
crates/cardwire-cli/src/: args.rs  client.rs  dbus.rs  main.rs  output.rs
crates/cardwire-core/: Cargo.toml
crates/cardwire-core/src/: lib.rs
crates/cardwire-core/src/gpu/: discover.rs  ebpf.rs  mod.rs  models.rs
crates/cardwire-core/src/iommu/: errors.rs  groups.rs  mod.rs  pci.rs
crates/cardwire-core/src/pci/: errors.rs  iommu.rs  mod.rs  models.rs  pci_device.rs
crates/cardwire-daemon/: Cargo.toml
crates/cardwire-daemon/src/: config.rs  daemon.rs  dbus.rs  models.rs
crates/cardwire-ebpf/: Cargo.toml  build.rs
crates/cardwire-ebpf/src/: bpf.c  errors.rs  lib.rs
nix/: default.nix  nixos-module.nix  vm-configuration.nix
