[workspace]
resolver = "2"
members = [
    "crates/cardwire-core",
    "crates/cardwire-daemon",
    "crates/cardwire-cli",
    "crates/cardwire-ebpf",
]

[workspace.package]
version = "0.1.0"
authors = ["Luytan <luytan@khora.me>"]
repository = "https://github.com/Luytan/cardwire"
edition = "2024"
rust-version = "1.92.0"
license = "GPL-3.0"

[workspace.dependencies]
tokio = { version = "1.49.0", features = ["full"] }
zbus = { version = "5.14.0", features = ["tokio"] }
clap = { version = "4.5.60", features = ["derive"] }
config = { version = "0.15.19", features = ["toml"] }
serde = { version = "1.0.228", features = ["derive"] }
log = { version = "0.4.29" }
thiserror = { version = "2.0.18" }

[profile.dev]
panic = "abort"
overflow-checks = true

[profile.release]
panic = "abort"
overflow-checks = true