[package]
name = "cardwire-daemon"
version.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Daemon for cardwire GPU management"

[dependencies]
cardwire-core = { path = "../cardwire-core" }
tokio.workspace = true
zbus.workspace = true
config.workspace = true
serde.workspace = true
log.workspace = true
thiserror.workspace = true
anyhow.workspace = true
env_logger.workspace = true
toml.workspace = true
serde_json.workspace = true
[[bin]]
name = "cardwired"
path = "src/daemon.rs"
